src/objects/SF_CRW_notes__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SF CRW notes</relationshipLabel>
        <relationshipName>SF_CRW_notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotesCode__c</fullName>
        <label>NotesCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respond__c</fullName>
        <label>Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent_to__c</fullName>
        <label>Sent to</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder1__c</fullName>
        <description>Formula to sort CRW comments and questions: Court Date+Name+calculated order</description>
        <formula>TEXT(YEAR( luReports__r.CourtDate__c ))+TEXT(MONTH(luReports__r.CourtDate__c ))+TEXT(DAY(luReports__r.CourtDate__c ))+&quot;.&quot;+
 Contact__r.Name_and_P_C_Id__c +&quot;.&quot;+
CASE(text( Status__c ),
&quot;Approved&quot;,&quot;10&quot;,
&quot;Open&quot;,&quot;30&quot;,
&quot;Closed&quot;,&quot;90&quot;,
&quot;Response&quot;,&quot;20&quot;,
&quot;Re-open&quot;,&quot;25&quot;,
&quot;40&quot;)+&quot;.&quot;+
text( LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SortOrder1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Set_by__c</fullName>
        <label>Status_Set_by</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>luReports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF CRW</label>
        <referenceTo>SF_CRW__c</referenceTo>
        <relationshipLabel>SF CRW notes</relationshipLabel>
        <relationshipName>SF_CRW_notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SF CRW notes</label>
    <nameField>
        <label>SF CRW notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF CRW notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>